# x402-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  benchmark.yml  ci.yml  lint.yml  nightly.yml  release.yml
examples/: client.rs  facilitator.rs  server.rs
src/: client.rs  errors.rs  facilitator.rs  lib.rs  server.rs  types.rs  utils.rs
src/schemes/: exact_evm.rs  mod.rs
tests/: integration.rs
