[package]
name = "x402-rs"
version = "0.1.0"
edition = "2021"
authors = ["x402-rs Contributors <niklabh811@gmail.com>"]
license = "Apache-2.0"
description = "A complete Rust implementation of the x402 protocol for blockchain-based micropayments over HTTP"
repository = "https://github.com/niklabh/x402-rs"
homepage = "https://x402.org"
documentation = "https://docs.rs/x402-rs"
keywords = ["x402", "payments", "http", "blockchain", "micropayments"]
categories = ["web-programming", "cryptography", "network-programming"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
ethers = { version = "2.0", features = ["abigen", "ws"] }
url = "2.5"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
sha3 = "0.10"
chrono = "0.4"
rand = "0.8"

[dev-dependencies]
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.6", features = ["trace"] }
http = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-test = "0.4"
dotenvy = "0.15"
anyhow = "1.0"

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "facilitator"
path = "examples/facilitator.rs"

[lib]
name = "x402_rs"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

